[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/level/scripts/level.gd" type="Script" id=1]
[ext_resource path="res://game/player/player_aim.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/gui/ingame_gui.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/gui/black_screen.tscn" type="PackedScene" id=5]

[node name="level" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="gui_layer" type="CanvasLayer" parent="."]

[node name="ingame_gui" parent="gui_layer" instance=ExtResource( 3 )]

[node name="black" parent="gui_layer" instance=ExtResource( 5 )]

[node name="player_aim" parent="." instance=ExtResource( 2 )]
position = Vector2( 1920, 1080 )
mouse_sensitivity = Vector2( 1, 1 )
limit_left = 0
limit_top = 0
limit_right = 3840
limit_bottom = 2160
ammo_count = 1
[connection signal="ammo_depleated" from="player_aim" to="." method="_on_player_aim_ammo_depleated"]
[connection signal="shot" from="player_aim" to="." method="_on_player_aim_shot"]
